<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_map"
                android:textStyle="bold"
                android:textSize="28sp"
                android:fontFamily="@font/roboto_slab_extrabold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    >


                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_login_with_your_information"
                    android:alpha="0.7"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:alpha="0.7"
                    android:textStyle="bold"
                    android:textSize="17sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/done"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password1"
                    android:alpha="0.7"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/password_icon"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_centerVertical="true"
        android:alpha="0.7"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/i_forget_my_password"/>
</RelativeLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        app:cornerRadius="32dp"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:alpha="0.7"
                android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/facebook_round"
                        android:layout_margin="12dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/github"
                        android:layout_margin="12dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/twitter"
                        android:layout_margin="12dp"/>


                </LinearLayout>





                
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</RelativeLayout>