<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F5E5E"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="20dp"
        android:background="@drawable/layout_custome">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_slab_medium"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="36dp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="18"
            android:hint="@string/email"
            android:textSize="15sp"
            android:background="@drawable/edit_text"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="18"
            android:hint="@string/password"
            android:textSize="15sp"
            android:background="@drawable/edit_text"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="8dp"
            android:paddingStart="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FE0F0E0E"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_below="@id/pass"
            android:layout_marginTop="20dp"
            android:id="@+id/btn">

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn"
            android:layout_alignStart="@id/btn"
            android:textColor="#141212"
            android:fontFamily="@font/gudea_bold"
            android:text="@string/forget_password"
            android:layout_marginTop="15dp"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn"
            android:layout_alignEnd="@id/btn"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="-1dp"
            android:textColor="#141212"
            android:fontFamily="@font/gudea_bold"
            android:text="@string/sign_up"
            android:textSize="20sp">

        </TextView>

    </RelativeLayout>


</RelativeLayout>